# Hosta

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  main_test.py  oss-pkg-info.yaml  pytest.ini
LICENSES/: BSD-3-Clause.txt
cmake/: DetermineHOSTCCompiler.cmake  DetermineHOSTCXXCompiler.cmake  HostBuild.cmake  HostCompilerUtilities.cmake  HostTest.cmake  HostTestUtilities.cmake  TestHOSTCCompiler.cmake  unittest.cmake
sample/: CMakeLists.txt
sample/disabled_test/: CMakeLists.txt  test_main.c
sample/fixture_tests/: CMakeLists.txt  unity_fixture_test.c
sample/relative_path_test/: CMakeLists.txt
sample/src/: calc.c  calc.h  main.c
sample/test/: CMakeLists.txt  googletest_main.cpp  test_main.c  unity.c  unity_fixture_test_main.c  unity_test_main.c
sample/test2/: CMakeLists.txt  test2_main.c
src/: CMakeLists.txt  test_main.c
tests/: CMakeLists.txt  add_host_custom_target_test.py  add_host_dependencies_test.py  add_host_executable_test.py  add_host_library_test.py  conftest.py  enable_host_languages_test.py  find_host_binutils_test.py  find_host_compiler_id_test.py  find_host_compiler_test.py  find_host_language_test.py  get_host_absolute_paths_test.py  get_host_file_dependencies_test.py  get_host_include_flag_test.py  get_host_standard_compile_option_test.py  get_host_target_name_test.py  get_host_target_names_test.py  get_host_target_properties_test.py  get_host_target_property_test.py  host_logging_error_test.py  load_host_compiler_preferences_test.py  parse_host_compiler_abi_info_test.py  remove_host_namespace_prefix_test.py  save_host_compiler_preferences_test.py  separate_host_arguments_test.py  separate_host_scoped_arguments_test.py  set_host_platform_default_options_test.py  set_host_target_properties_test.py  set_host_target_property_test.py  testing_cc_test.py  testing_clang_test.py  testing_clangpp_test.py  testing_cpp_test.py  testing_disabled_c_test.py  testing_disabled_cpp_test.py  testing_disabled_test.py  testing_enabled_c_test.py  testing_enabled_cpp_test.py  testing_enabled_test.py  testing_gcc_test.py  (+6 more)
tests/project/: CMakeLists.txt
tests/project/calculator/: calc.c  calc.cpp  calc.hpp
tests/project/disabled_test/: CMakeLists.txt
tests/project/fixture_tests/: CMakeLists.txt
tests/project/relative_path_test/: CMakeLists.txt
tests/project/src/: main.c
tests/project/test/: CMakeLists.txt  google_test_main.cpp
tests/project/unity/: CMakeLists.txt
tests/sample/: CMakeLists.txt
tests/sample/disabled_test/: CMakeLists.txt
tests/sample/fixture_tests/: CMakeLists.txt
tests/sample/relative_path_test/: CMakeLists.txt
tests/sample/src/: CMakeLists.txt  calc.c
